--- a/core/res/res/values/symbols.xml
+++ b/core/res/res/values/symbols.xml
@@ -1281,6 +1281,9 @@
   <java-symbol type="dimen" name="kg_edge_swipe_region_size" />
   <java-symbol type="dimen" name="kg_squashed_layout_threshold" />
   <java-symbol type="dimen" name="kg_small_widget_height" />
+  <java-symbol type="dimen" name="lockscreen_target_inset" />
+  <java-symbol type="drawable" name="ic_lockscreen_lock_pressed" />
+  <java-symbol type="drawable" name="ic_lockscreen_target_activated" />
   <java-symbol type="dimen" name="glowpad_notification_font_size" />
   <java-symbol type="dimen" name="glowpad_notification_text_radius" />
   <java-symbol type="dimen" name="glowpad_overflow_notifications_margin_top" />
